fixed sponsors too narrow

--- a/web/src/pages/main/Main.css
+++ b/web/src/pages/main/Main.css
@@ -24,7 +24,7 @@
     }
 
     .main {
-        width: calc(100vw - 40rem);
+        width: 100%;
         float: left;
         overflow-x: hidden;
         height: 100%;
@@ -64,7 +64,7 @@
         overflow: auto;
         width: 100%;
         height: 100%;
-        }
+    }
   
     .sponsorsContainer {
         display: none;
